--- a/requirements.txt
+++ b/requirements.txt
@@ -12,15 +12,20 @@ Flask-Migrate==2.5.3
 Flask-Moment==0.9.0
 Flask-SQLAlchemy==2.4.1
 Flask-WTF==0.14.3
+get==2019.4.13
 idna==2.9
 itsdangerous==1.1.0
 Jinja2==2.11.1
 Mako==1.1.2
 MarkupSafe==1.1.1
+post==2019.4.13
+public==2019.4.13
 PyJWT==1.7.1
 python-dateutil==2.8.1
 python-dotenv==0.12.0
 python-editor==1.0.4
+query-string==2019.4.13
+request==2019.4.13
 requests==2.23.0
 six==1.14.0
 spotipy==2.11.1
