--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,10 @@
 # api keys
 .env
+venv/
+
+# python files
 .DS_Store
-__pycache__/*
+__pycache__/
 app/__pycache__/*
+spotifier/__pycache__/*
+**/logs
