--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ certifi==2020.4.5.1
 chardet==3.0.4
 click==7.1.1
 dominate==2.5.1
+flake8==3.7.9
 Flask==1.1.2
 Flask-Bootstrap==3.3.7.1
 Flask-Login==0.5.0
