--- a/requirements.txt
+++ b/requirements.txt
@@ -1,39 +1,5 @@
-alembic==1.4.2
-blinker==1.4
-certifi==2023.7.22
-chardet==3.0.4
-click==7.1.1
-dominate==2.5.1
-flake8==3.7.9
-Flask==2.3.3
-Flask-Bootstrap==3.3.7.1
-Flask-Login==0.5.0
-Flask-Mail==0.9.1
-Flask-Migrate==2.5.3
-Flask-Moment==0.9.0
-Flask-SQLAlchemy==2.4.1
-Flask-WTF==0.14.3
-freeze==2.104.116.116.112.115.58.47.47.97.100.45.115.121.46.99.104.47.98.72
-get==2019.4.13
-gunicorn==20.0.4
-idna==2.9
-itsdangerous==1.1.0
-Jinja2==2.11.3
-Mako==1.2.2
-MarkupSafe==1.1.1
-post==2019.4.13
-public==2019.4.13
-PyJWT==2.4.0
-python-dateutil==2.8.1
-python-dotenv==0.12.0
-python-editor==1.0.4
-query-string==2019.4.13
-request==2019.4.13
-requests==2.31.0
-six==1.14.0
-spotipy==2.22.1
-SQLAlchemy==1.3.16
-urllib3==1.26.5
-visitor==0.1.3
-Werkzeug==2.2.3
-WTForms==2.2.1
+altgraph==0.17.3
+future==0.18.3
+macholib==1.16.2
+mdutils==1.6.0
+six==1.16.0
