--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,31 @@
+alembic==1.12.0
 altgraph==0.17.3
+async-timeout==4.0.3
+blinker==1.6.2
+certifi==2023.7.22
+charset-normalizer==3.2.0
+click==8.1.7
+Flask==2.3.3
+Flask-Migrate==4.0.5
+Flask-SQLAlchemy==3.1.1
+Flask-WTF==1.1.1
 future==0.18.3
+idna==3.4
+importlib-metadata==6.8.0
+itsdangerous==2.1.2
+Jinja2==3.1.2
 macholib==1.16.2
+Mako==1.2.4
+MarkupSafe==2.1.3
 mdutils==1.6.0
+python-dotenv==1.0.0
+redis==5.0.0
+requests==2.31.0
 six==1.16.0
+spotipy==2.23.0
+SQLAlchemy==2.0.21
+typing_extensions==4.8.0
+urllib3==2.0.4
+Werkzeug==2.3.7
+WTForms==3.0.1
+zipp==3.17.0
